# window-manager

./: Cargo.toml
cpp_test/: xmake.lua
cpp_test/src/: WinRect.cpp  WinRect.h  WindowListers.cpp  WindowListers.h  WindowReaders.cpp  WindowReaders.h  main.cpp
manager/: Cargo.toml
manager-cpp/src/: WindowHandler.cpp  WindowHandler.h  WindowListers.cpp  WindowListers.h  WindowReaders.cpp  WindowReaders.h  main.cpp
manager-rs/: Cargo.toml
manager-rs/src/: listers.rs  main.rs
manager-rs/src/connection/: hwnd.rs  info.rs  size.rs  title.rs  window.rs
manager-rs/src/types/: handler.rs
manager-rs/src/utility/: io.rs
manager-rust-test/: Cargo.toml
manager-rust-test/src/: listers.rs  main.rs  types.rs  window_reader.rs
manager-rust-test/src/connection/: mod.rs  size.rs  title.rs  window.rs
manager-rust-test/src/types/: connection.rs  mod.rs  types.rs
manager/src/: main.rs  window_reader.rs
src/connection/: info.rs  title.rs
src/types/: mod.rs
src/utility/: io.rs
