[package]
name = "manager-rust-test"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winnt",
    "winuser",
    "minwindef",
    "libloaderapi",
] }
